--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.4",
+    "@astrojs/partytown": "^2.0.4",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.4.0",
     "flowbite": "^2.3.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "flowbite-typography": "^1.0.3"
   }
 }
