--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.19",
     "flowbite-typography": "^1.0.3"
   }
 }
